# expert-octo-waddle

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: chatbot-api-guide.md  csv-inventory-implementation-plan.md  packaging-plan.md
scripts/: simulate_inventory_check.py  simulate_order_endpoints.py  simulate_product_list_search.py  simulate_webhook_management.py  simulate_workflow.py
src/inventory_prototype/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  tasks.py
src/inventory_prototype/routes/: inventory.py  orders.py  products.py  webhooks.py
src/inventory_prototype/services/: csv_service.py
tests/: conftest.py
tests/test_inventory/: pytest.ini.bak
tests/test_inventory/test_integration/: conftest.py  test_authentication.py  test_b2b_scenarios.py  test_chatbot_flows.py  test_inventory_scenarios.py  test_listing_searching.py  test_order_integration.py  test_order_lifecycle.py  test_product_consistency.py  test_webhook_integration.py
tests/test_inventory/test_unit/: test_inventory_validation.py  test_order_validation.py  test_product_validation.py  test_webhook_validation.py
