[tool.poetry]
name = "inventory-prototype"
version = "0.1.0"
description = "A simple, extensible inventory API system using FastAPI and SQLAlchemy, designed for chatbot integration and rapid prototyping."
authors = ["Patrick Abainza <patrickabainza@gmail.com>"]
readme = "README.md"
license = "MIT" # Assuming MIT based on LICENSE file
homepage = "https://github.com/PatrickAbainza/expert-octo-waddle"
repository = "https://github.com/PatrickAbainza/expert-octo-waddle"
documentation = "https://github.com/PatrickAbainza/expert-octo-waddle/blob/main/docs/chatbot-api-guide.md"
keywords = ["fastapi", "inventory", "api", "chatbot", "prototype", "sqlalchemy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.109.0"  # Pin to exact version
starlette = "0.35.1"  # Pin to compatible version
httpx = "0.26.0"  # Upgrade to latest compatible version
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
python-multipart = "^0.0.18"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"  # Downgrade pytest
pytest-asyncio = "0.21.1" # Add and pin pytest-asyncio
pytest-cov = "4.1.0"  # Add coverage support
pytest-mock = "3.12.0"  # Add mocking support
black = "^24.0"
mypy = "^1.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
